--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,12 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon -r dotenv/config server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@google-cloud/documentai": "^9.5.0",
     "@google/genai": "^1.33.0",
